inicio fila de vídeos

--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
     <section class="categoria">
         <h2>/Trailers da franquia</h2>
         <div class="categoria-videos">
+            <a href="https://www.youtube.com/watch?v=DXc8tiB8TBI">
+                <img src="https://img.youtube.com/vi/DXc8tiB8TBI/maxresdefault.jpg" alt="">
+            </a>
+
+            <a href="">
+                <img src="" alt="">
+            </a>
+
             <a href="">
                 <img src="" alt="">
             </a>
