--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Aluraflix</title>
 </head>
 <body>
-    <header>Aluraflix</header>
+    <header>baretaflix</header>
     <section class="chamada">
         <div class="chamada-texto">
             <h1>Velozes e Furiosos</h1>
@@ -25,12 +25,12 @@
                 <img src="https://img.youtube.com/vi/DXc8tiB8TBI/maxresdefault.jpg" alt="">
             </a>
 
-            <a href="">
-                <img src="" alt="">
+            <a href=https://www.youtube.com/watch?v=c8UcUiYAvpw&pp=>
+                <img src="https://upload.wikimedia.org/wikipedia/pt/thumb/2/20/2_Fast_2_Furious_2003.jpg/250px-2_Fast_2_Furious_2003.jpg" alt="">
             </a>
 
-            <a href="">
-                <img src="" alt="">
+            <a href="https://www.youtube.com/watch?v=3CXw0mwqQQs&pp=ygUUdmVsb3plcyBlIGZ1cmlvc29zIDM%3D">
+                <img src="https://br.web.img2.acsta.net/pictures/210/383/21038387_20130909201408304.jpg" alt="">
             </a>
         </div>
     </section>
